lang/lc/tests/err_redef.sys
bool function foo(bool a, a)
{
	a
}

system main(bool foo, foo)
{
	boo a;
	bool a;
	bool a, a;
	bool foo;

	a = foo;
}
